# crypto_data_downloader

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  crypto_data_downloader.code-workspace  main.cpp
VS/: crypto_data_downloader.sln  crypto_data_downloader.vcxproj  crypto_data_downloader.vcxproj.filters
include/stonky/: downloader.h
include/stonky/binance/: binance_common.h  binance_futures_downloader.h  binance_spot_downloader.h
include/stonky/bybit/: bybit_downloader.h
include/stonky/hyperliquid/: hyperliquid_downloader.h
include/stonky/mexc/: mexc_futures_downloader.h  mexc_spot_downloader.h
include/stonky/okx/: okx_downloader.h
include/vk/: downloader.h  postgres_connector.h
include/vk/binance/: binance_common.h  binance_downloader.h  binance_futures_downloader.h  binance_spot_downloader.h
include/vk/bybit/: bybit_downloader.h
include/vk/mexc/: mexc_futures_downloader.h  mexc_spot_downloader.h
include/vk/okx/: okx_downloader.h
python/: bybit_history_downloader.py  requirements.txt
src/: binance_common.cpp  binance_downloader.cpp  binance_futures_downloader.cpp  binance_spot_downloader.cpp  bybit_downloader.cpp  hyperliquid_downloader.cpp  mexc_futures_downloader.cpp  mexc_spot_downloader.cpp  okx_downloader.cpp  postgres_connector.cpp
